# akshare-cli

./: .gitignore  pyproject.toml
akshare-cli/references/: common-functions.md
skill/akshare-cli/: SKILL.md
src/akcli/: __init__.py  __main__.py  categories.py  cli.py  favorites.py  formatter.py  registry.py  runner.py
