[project]
name = "akcli"
version = "0.1.0"
description = "CLI tool for AKShare - Chinese financial data for humans and AI agents"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.16.25",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
ak = "akcli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akcli"]

[tool.hatch.build.targets.sdist]
include = ["src/akcli"]
